Updated Spanish translation.
2005-02-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-09 13:46+0100\n"
-"PO-Revision-Date: 2005-02-09 13:48+0100\n"
+"PO-Revision-Date: 2005-02-15 01:53+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -617,9 +617,7 @@ msgstr "El Identificador Uniforme de Recurso (URI) para el archivo es inválido.
 msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
-msgstr ""
-"El Identificador Uniforme de Recurso «%s» es inválido o no apunta a un "
-"archivo actual."
+msgstr "El Identificador Uniforme de Recurso «%s» es inválido o no apunta a un archivo real."
 
 #: ../src/yelp-window.c:786 ../src/yelp-window.c:1140
 msgid "Man pages are not supported in this version."
