Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -229,7 +229,7 @@ msgstr "Rea_nomena"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Navega amb un cursor"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -281,11 +281,11 @@ msgstr "Tipus de lletra per al text amb amplada variable"
 
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Utilitza un cursor controlable amb el teclat quan es visualitzen les pàgines."
 
 #: ../data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Utilizta un cursor"
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
