--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-22  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish Translation by Serkan Kenar
+
 2005-02-19  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
