Add some casts etc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-02-22  Ross Burton  <ross@burtonini.com>
 
+	* src/yelp-window.c:
+	Add some casts.
+
+2005-02-22  Ross Burton  <ross@burtonini.com>
+
 	* src/yelp-utils.h:
 	Add YELP_DOC_TYPE_XHTML.
 	
