--- a/po/pa.po
+++ b/po/pa.po
@@ -2,6 +2,7 @@
 # Amanpreet Singh Alam
 # <amanlinux@netscape.net>, 2004.
 # Amanpreet Singh Alam <aalam@redhat.com>, 2005.
+# Amanpreet Singh Alam <amanpreetalam@yahoo.com>, 2005.
 #
 #
 msgid ""
@@ -9,8 +10,8 @@ msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2005-01-14 18:20+0530\n"
-"Last-Translator: Amanpreet Singh Alam <aalam@redhat.com>\n"
+"PO-Revision-Date: 2005-02-23 10:43+0530\n"
+"Last-Translator: Amanpreet Singh Alam <amanpreetalam@yahoo.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +53,7 @@ msgstr "ਲਾਇਬ੍ਰੇਰੀ ਫੰਕਸ਼ਨ"
 
 #: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
-msgstr "ਮੈਨ ਸਫੇ"
+msgstr "Man ਸਫ਼ੇ"
 
 #: data/man.xml.in.h:10
 msgid "OpenSSL Applications"
@@ -96,7 +97,7 @@ msgstr "X11 ਕਾਰਜ"
 
 #: data/man.xml.in.h:20
 msgid "X11 Configuration"
-msgstr "X11ਸੰਰਚਨਾ"
+msgstr "X11 ਸੰਰਚਨਾ"
 
 #: data/man.xml.in.h:21
 msgid "X11 Devices"
@@ -208,7 +209,7 @@ msgstr "ਬੁੱਕਮਾਰਕ"
 
 #: data/ui/yelp.glade.h:7
 msgid "C_ase sensitive"
-msgstr "ਅੱਖਰ ਅਕਾਰ ਲਈ ਸੰਵੇਦਨਸ਼ੀਲ(_a)"
+msgstr "ਅੱਖਰ ਅਕਾਰ ਪ੍ਰਤੀ ਸੰਵੇਦਨਸ਼ੀਲ(_a)"
 
 #: data/ui/yelp.glade.h:8
 msgid "Find"
@@ -228,7 +229,7 @@ msgstr "ਨਾਂ-ਤਬਦੀਲ(_n)"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr "ਗੁਪਤ-ਲੇਖਣ ਨਾਲ ਖੋਲੋ(_B)"
+msgstr "ਗੁਪਤ-ਲੇਖਣ ਨਾਲ ਝਲਕ(_B)"
 
 #: data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -292,7 +293,7 @@ msgstr "ਸਿਸਟਮ ਫੋਂਟ ਵਰਤੋਂ"
 
 #: data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr "ਸਿਸਟਮ ਲਈ ਨਿਰਧਾਰਿਤ ਕੀਤੇ ਮੂਲ ਫੋਂਟ ਵਰਤੋਂ"
+msgstr "ਸਿਸਟਮ ਲਈ ਨਿਰਧਾਰਿਤ ਕੀਤੇ ਮੂਲ ਫੋਂਟ ਵਰਤੋਂ।"
 
 #: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2169
 msgid "Yelp"
@@ -305,7 +306,7 @@ msgstr "ਯੇਲਪ ਫੈਕਟਰੀ"
 #: src/yelp-bookmarks.c:241 src/yelp-bookmarks.c:313
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr "ਇਸ ਸਫੇ ਲਈ ਬੁੱਕਮਾਰਕ ਨਾਂ<b>%s</b> ਪਹਿਲਾਂ ਹੀ ਮੌਜੂਦ ਹੈ।"
+msgstr "ਇਸ ਸਫੇ ਲਈ ਬੁੱਕਮਾਰਕ ਨਾਂ <b>%s</b> ਪਹਿਲਾਂ ਹੀ ਮੌਜੂਦ ਹੈ।"
 
 #: src/yelp-bookmarks.c:341
 msgid "Document Sections"
@@ -367,7 +368,7 @@ msgstr ""
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
-msgstr "ਵਰਤਣ ਲਈ ਕੈਚੇ ਡਾਇਰੈਕਟਰੀ ਪ੍ਰਭਾਸ਼ਿਤ ਕਰੋ"
+msgstr "ਵਰਤਣ ਲਈ ਕੈਂਚੇ ਡਾਇਰੈਕਟਰੀ ਪ੍ਰਭਾਸ਼ਿਤ ਕਰੋ"
 
 #: src/yelp-main.c:129
 #, c-format
@@ -393,11 +394,11 @@ msgstr ""
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
-msgstr "ਦਸਤਾਵੇਜ ਜਾਣਕਾਰੀ"
+msgstr "ਦਸਤਾਵੇਜ਼ ਜਾਣਕਾਰੀ"
 
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
-msgstr "ਦਸਤਾਵੇਜ ਦਾ YelpDocInfo ਢਾਂਚਾ "
+msgstr "ਦਸਤਾਵੇਜ ਦਾ YelpDocInfo ਢਾਂਚਾ"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -458,7 +459,7 @@ msgstr ""
 
 #: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
-msgstr "ਯੇਲਪ:ਦਸਤਾਵੇਜ ਵਿੱਚ ਕੋਈ hrefਵਿਸ਼ੇਸਤਾ ਨਹੀਂ ਲੱਭੀ "
+msgstr "ਯੇਲਪ:ਦਸਤਾਵੇਜ ਵਿੱਚ ਕੋਈ hrefਵਿਸ਼ੇਸਤਾ ਨਹੀਂ ਲੱਭੀ"
 
 #: src/yelp-toc-pager.c:1038 src/yelp-xslt-pager.c:381
 msgid "Out of memory"
@@ -570,11 +571,11 @@ msgstr "ਬੁੱਕਮਾਰਕ ਸੋਧ(_E)..."
 
 #: src/yelp-window.c:399
 msgid "_Open Link"
-msgstr "ਸੰਬੰਧ ਖੋਲੋ(_O)"
+msgstr "ਸਬੰਧ ਖੋਲੋ(_O)"
 
 #: src/yelp-window.c:404
 msgid "Open Link in _New Window"
-msgstr "ਸੰਬੰਧ ਨਵੇਂ ਝਰੋਖੇ ਵਿੱਚ ਖੋਲੋ(_N)"
+msgstr "ਸਬੰਧ ਨਵੇਂ ਝਰੋਖੇ ਵਿੱਚ ਖੋਲੋ(_N)"
 
 #: src/yelp-window.c:409
 msgid "_Copy Link Address"
@@ -666,13 +667,14 @@ msgstr "ਲੋਡ ਕੀਤਾ ਜਾਦਾ ਹੈ..."
 #: src/yelp-window.c:2166
 msgid "translator-credits"
 msgstr ""
-"ਅਮਨਪ੍ਰੀਤ ਸਿੰਘ ਆਲਮ<amanlinux@netscape.net>\n"
+"ਅਮਨਪ੍ਰੀਤ ਸਿੰਘ ਆਲਮ<aalam@redhat.com>\n"
 "ਗੁਰਸ਼ਰਨ ਸਿੰਘ ਅਤੇ ਜਸਵਿੰਦਰ ਸਿੰਘ ਫੂਲੇਵਾਲਾ\n"
+"ਪੰਜਾਬ ਲੀਨਕਸ ਤਕਨਾਲੋਜੀ ਦਾ ਉੱਦਮ\n"
 "http://punlinux.sourceforge.net"
 
 #: src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "ਗਨੋਮ ਵਿਹੜੇ ਲਈ ਦਸਤਾਵੇਜ ਝਲਕਾਰਾ ਤੇ ਦਰਸ਼ਕ ਹੈ"
+msgstr "ਗਨੋਮ ਵਿਹੜੇ ਲਈ ਦਸਤਾਵੇਜ਼ ਝਲਕਾਰਾ ਤੇ ਦਰਸ਼ਕ ਹੈ।"
 
 #: src/yelp-xslt-pager.c:194
 #, c-format
