Updating Brazilian Portuguese Translations

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-25  Estêvão Samuel Procóoui <tevaum@ig.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese Translation.
+
 2005-02-24  Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
