Updated Welsh translation.
2005-02-28  Rhys Jones  <rhys@sucs.org>

	* cy.po: Updated Welsh translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-28  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-02-25  Estêvão Samuel Procóoui <tevaum@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese Translation.
