--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-28  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2005-02-28  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
