--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-03  Takeshi AIHANA <aihana@jcom.home.ne.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-02-28  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
