--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-03  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2005-03-03  Takeshi AIHANA <aihana@jcom.home.ne.jp>
 
 	* ja.po: Updated Japanese translation.
