--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-08  Ahmad Riza H Nst  <ari@160c.afraid.org>
+
+	* id.po: Updated Indonesian Translation.
+
 2005-03-07  Mugurel Tudor  <mugurelu@go.ro>
 
 	* ro.po: Updated Romanian translation.
