Added new Language, Kinyarwanda (rw), to this package

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-31  Steve Murphy  <murf@e-tools.com>
+
+        * configure.in: Added "rw" to ALL_LINGUAS.
+
 2005-03-10  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/yelp-db-pager.c: (walker_walk_xml):
