--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-03  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali translation
+
 2005-04-01  Adi Attar  <aattar@cvs.gnome.org>
 
 	* xh.po: Added Xhosa translation.
