Updated Nepali translation (with menu strings)
2005-04-04  Pawan Chitrakar  <pawan@nplinux.org>

	* ne.po: Updated Nepali translation (with menu strings)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* ne.po: Updated Nepali translation
 
+2005-04-03  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Updated Nepali translation
+
 2005-04-01  Adi Attar  <aattar@cvs.gnome.org>
 
 	* xh.po: Added Xhosa translation.
