*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-14  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>
+
+	* configure.in: Added "ug" to ALL_LINGUAS.
+
 2005-04-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in:  Define MOZILLA_INTERNAL_API, which is necessary since
