--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-14  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>
+
+	* ug.po: Added Uighur translation
+
 2005-04-03  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali translation
