--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-19  Pablo Saratxaga  <pablo@mandriva.com>
+
+	* wa.po: Updated Walloon file
+
 2005-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Upodated Basque translation.
@@ -20,7 +24,7 @@
 
 2005-03-31  Steve Murphy  <murf@e-tools.com>
 
-        * rw.po: Added Kinyarwanda translation.
+	* rw.po: Added Kinyarwanda translation.
 
 2005-03-27  Abel Cheung  <maddog@linuxhall.org>
 
@@ -1599,7 +1603,7 @@
 
 2003-07-18  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2003-07-13  Kostas Papadimas <pkst@gmx.net>
 
@@ -1615,7 +1619,7 @@
 
 2003-07-10 Hasbullah Bin Pit <sebol@ikhlas.com>
 
-        * ms.po: Updated Malay translation.
+	* ms.po: Updated Malay translation.
 
 2003-07-08  Andras Timar  <timar@gnome.hu>
 
