updated Walloon file (email address fix)

--- a/po/wa.po
+++ b/po/wa.po
@@ -681,7 +681,7 @@ msgstr "Dji tchedje..."
 #. * will show up in the "about" box
 #: src/yelp-window.c:2166
 msgid "translator-credits"
-msgstr "Pablo Saratxaga <pablo@mandrakesoft.com>"
+msgstr "Pablo Saratxaga <pablo@walon.org>"
 
 #: src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
