--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-28   Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek translation
+
 2005-04-19  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Updated Walloon file
