--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* et.po: Translation updated.
 
+2005-04-29  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-04-28   Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
