--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-01  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS
+	* configure.in:
+	- Version 2.10.0
+
+	* po/ChangeLog:
+	- Removed stray CVS conflict marker
+
 2005-04-30  Paolo Borelli  <pborelli@katamail.com>
 
 	yelp-bookmarks.c: constify some vars.
