--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,63 @@
+Changes in 2.10.0:
+------------------
+* Code cleanup (Paolo Borelli)
+* More code cleanup (Kjartan Marass)
+* Still more code cleanup (Ross Burton)
+* Clean code, clean (Davyd Madeley)
+* Fixed compilation and build issues (Christian Persch)
+* Fixed (sans-X)HTML display problem (Ross Burton)
+* Somewhat better wording and organization (Shaun McCance)
+* Fix crash on links to non-existing pages (Chris Lahey)
+* Lots of bookmarks love (Don Scorgie)
+* Nice big Yelp icon on the TOC pages (Shaun McCance)
+* Other prettification work (Shaun McCance)
+* Documents should now sort semi-properly (Shaun McCance)
+* Navigation fixes for the Go menu (Shaun McCance)
+* Updated translations:
+  ar      (Arafat Medini)
+  bg      (Alexander Shopov, Vladimir Petkov)
+  ca      (Jordi Mallach)
+  cs      (Miloslav Trmac)
+  cy      (Rhys Jones)
+  da      (Ole Laursen)
+  de      (Hendrik Brandt, Frank Arnold)
+  el      (Kostas Papadimas, Nikos Charonitakis)
+  en_CA   (Adam Weinberger)
+  en_GB   (David Lodge)
+  es      (Francisco Javier F. Serrador)
+  et      (Priit Laes, Ivar Smolin)
+  eu      (Iñaki Larrañaga)
+  fi      (Pauli Virtanen)
+  fr      (Baptiste Mille-Mathias)
+  gu      (Ankit Patel)
+  hu      (Gabor Kelemen)
+  id      (Ahmad Riza H Nst)
+  ja      (Takeshi AIHANA)
+  ko      (Changwoo Ryu)
+  lt      (½ygimantas Beru­ka)
+  nb      (Kjartan Maraas)
+  ne      (Pawan Chitrakar)
+  nl      (Reinout van Schouwen, Tino Meinen)
+  nn      (Kjartan Maraas)
+  no      (Kjartan Maraas)
+  pl      (Artur Flinta)
+  pt      (Duarte Loreto)
+  pt_BR   (Raphael Higino)
+  ro      (Mugurel Tudor)
+  ru      (Leonid Kanter)
+  rw      (Steve Murphy)
+  sq      (Laurent Dhima)
+  sr      (Danilo ¦egan)
+  sr@Latn (Danilo ¦egan)
+  sv      (Christian Rose)
+  tr      (Serkan Kenar)
+  ug      (Abduxukur Abdurixit)
+  uk      (Maxim Dziumanenko)
+  wa      (Pablo Saratxaga)
+  xh      (Adi Attar)
+  zh_CN   (Funda Wang)
+  zh_TW   (GNOME HK Team)
+
 Changes in 2.9.3:
 -----------------
 * Bookmark improvements (Don Scorgie, shaunm)
