- Depend on gdu 0.3.1
* configure.in:
- Depend on gdu 0.3.1

* src/yelp-gecko-utils.cpp:
- Set a minimum font size of 8pt

* stylesheets/db2html.xsl.in:
- Played with navbar and linktrail

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2005-05-06  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Depend on gdu 0.3.1
+
+	* src/yelp-gecko-utils.cpp:
+	- Set a minimum font size of 8pt
+
+	* stylesheets/db2html.xsl.in:
+	- Played with navbar and linktrail
+
 2005-05-01  Shaun McCance  <shaunm@gnome.org>
 
 	* NEWS
