- Added yelp.js, magic courtesy of Stuart Langridge - Cleaned up some
* data/Makefile.am:
* data/yelp.js:
* src/yelp-db-pager.c:
* stylesheets/db2html.xsl.in:
- Added yelp.js, magic courtesy of Stuart Langridge
- Cleaned up some margins and padding with the linktrail

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-07  Shaun McCance  <shaunm@gnome.org>
+
+	* data/Makefile.am:
+	* data/yelp.js:
+	* src/yelp-db-pager.c:
+	* stylesheets/db2html.xsl.in:
+	- Added yelp.js, magic courtesy of Stuart Langridge
+	- Cleaned up some margins and padding with the linktrail
+
 2005-05-06  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
