Updated Greek Translation.

--- a/po/el.po
+++ b/po/el.po
@@ -335,7 +335,7 @@ msgstr "Αφαίρεση Σελιδοδείκτη"
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr ""
-"Ένασ σελιδοδείκτης με το όνομα <b>%s</b> υπάρχει ήδη για αυτή την σελίδα."
+"Ένασ σελιδοδείκτης με το όνομα <b>%s</b> υπάρχει ήδη για αυτή τη σελίδα."
 
 #: ../src/yelp-bookmarks.c:406
 msgid "Document Sections"
@@ -577,7 +577,7 @@ msgstr "Περιε_χόμενα Βοήθειας"
 
 #: ../src/yelp-window.c:359
 msgid "Go to the listing of help topics"
-msgstr "Μετάβαση στην λίστα θεμάτων βοήθειας"
+msgstr "Μετάβαση στη λίστα θεμάτων βοήθειας"
 
 #: ../src/yelp-window.c:362
 msgid "_Previous Section"
@@ -646,7 +646,7 @@ msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
 msgstr ""
-"Τα έγγραφα SGML δεν υποστηρίζονται πια. Ζητήστε από τον συγγραφέα του "
+"Τα έγγραφα SGML δεν υποστηρίζονται πια. Ζητήστε από το συγγραφέα του "
 "εγγράφουνα το μετατρέψει σε  XML."
 
 #: ../src/yelp-window.c:1014
