- Changed color parameters around
* src/yelp-gecko-utils.cpp:
* src/yelp-html-gecko.c:
* src/yelp-settings.c:
* src/yelp-settings.h:
* stylesheets/db2html.xsl.in:
* stylesheets/info2html.xsl:
* stylesheets/man2html.xsl:
* stylesheets/toc2html.xsl:
- Changed color parameters around

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-05-11  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-gecko-utils.cpp:
+	* src/yelp-html-gecko.c:
+	* src/yelp-settings.c:
+	* src/yelp-settings.h:
+	* stylesheets/db2html.xsl.in:
+	* stylesheets/info2html.xsl:
+	* stylesheets/man2html.xsl:
+	* stylesheets/toc2html.xsl:
+	- Changed color parameters around
+
 2005-05-09  Shaun McCance  <shaunm@gnome.org>
 
 	* data/yelp.js:
