- Created yelp-common.xsl to hold common styling - Position the navbar at
* stylesheets/Makefile.am:
* stylesheets/db2html.xsl.in:
* stylesheets/yelp-common.xsl:
- Created yelp-common.xsl to hold common styling
- Position the navbar at the bottom, still quirky

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-16  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/Makefile.am:
+	* stylesheets/db2html.xsl.in:
+	* stylesheets/yelp-common.xsl:
+	- Created yelp-common.xsl to hold common styling
+	- Position the navbar at the bottom, still quirky
+
 2005-05-11  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-gecko-utils.cpp:
