Translation updated by Ivar Smolin.
2005-05-30  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -1,5 +1,9 @@
-# Yelp eesti tõlge.
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Yelp eesti keele tõlge.
+# Estonian translation of Yelp
+#
+# Copyright (C) 2002-2005 Free Software Foundation, Inc.
+# This file is distributed under the same license as the Yelp package.
+#
 # Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.
 # Allan Sims <allsi@eau.ee>, 2003
 # Priit Laes <amd store20 com>, 2005
@@ -8,7 +12,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: et-gnome@linux.ee\n"
 "POT-Creation-Date: 2005-02-08 15:34+0100\n"
 "PO-Revision-Date: 2005-02-09 11:58+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
@@ -379,7 +383,7 @@ msgstr "Faili ‘%s’ ei ole võimalik lugeda ja dekodeerida. Arvatavasti on fa
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
-msgstr "Määra millist cache kausta kasutada."
+msgstr "Kasutatava puhverkataloogi määramine"
 
 #: src/yelp-main.c:129
 #, c-format
