--- a/po/et.po
+++ b/po/et.po
@@ -12,10 +12,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: et-gnome@linux.ee\n"
 "POT-Creation-Date: 2005-05-23 14:08+0000\n"
-"PO-Revision-Date: 2005-05-23 23:00+0300\n"
-"Last-Translator: Priit Laes <amd@store20.com>\n"
+"PO-Revision-Date: 2005-05-29 10:54+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -386,7 +386,7 @@ msgstr "Faili ‘%s’ ei ole võimalik lugeda ja dekodeerida. Arvatavasti on fa
 
 #: ../src/yelp-main.c:95
 msgid "Define which cache directory to use"
-msgstr "Määra millist cache kausta kasutada."
+msgstr "Kasutatava puhverkataloogi määramine"
 
 #: ../src/yelp-main.c:129
 #, c-format
