--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-31  Terance Sola <terance@lyse.net>
+
+	* nb.po: Updated
+	* no.po: Updated
+
 2005-05-30  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
