--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-05  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Changed the translation of stylesheet.
+
 2005-05-31  Terance Sola <terance@lyse.net>
 
 	* nb.po: Updated
