--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-06  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2005-06-05  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
